--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,9 @@ temp/
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+
+# =============================================================================
+# Cursor Rules
+# =============================================================================
+
+.cursorrules
